--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+nav:
+  - name: "Home"
+    link: "/"
+  - name: "Research"
+    link: "/#research"
+  - name: "Publications"
+    link: "/#publications"
+  - name: "About Me"
+    link: "/#about-me"
